--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,5 @@ MONGO_URI="mongodb+srv://fitiarivony:PdUoOxFruNNSHpX7@clustermongostudent.wdyfhw
 
 JWT_SECRET=monSuperSecretTresLong
 JWT_EXPIRES_IN=24h
+
+REACT_APP_GOOGLE_CLIENT_ID=511349385041-a1mmmkvmon00pdr9stur60op9igg10ct.apps.googleusercontent.com
