--- a/.env.production
+++ b/.env.production
@@ -4,3 +4,7 @@ JWT_SECRET=monSuperSecretTresLong
 JWT_EXPIRES_IN=24h
 
 REACT_APP_GOOGLE_CLIENT_ID=511349385041-a1mmmkvmon00pdr9stur60op9igg10ct.apps.googleusercontent.com
+
+EMAIL_USER=portfo76@gmail.com
+EMAIL_PASS='prna ggcb zdbk hkwn'
+FRONT_URL=https://cicd-frontend-3rg8.onrender.com/
