--- a/.env.production
+++ b/.env.production
@@ -7,4 +7,4 @@ REACT_APP_GOOGLE_CLIENT_ID=511349385041-a1mmmkvmon00pdr9stur60op9igg10ct.apps.go
 
 EMAIL_USER=portfo76@gmail.com
 EMAIL_PASS='prna ggcb zdbk hkwn'
-FRONT_URL=https://cicd-frontend-3rg8.onrender.com/
+FRONT_URL=https://cicd-frontend-3rg8.onrender.com
